# TensorMake

./: README.md
src/: CMakeLists.txt  layer.cpp  main.cpp  matrix.cpp  neural_network.cpp
src/data/: XOR.hpp  mnist.hpp
src/include/: layer.h  matrix.h  neural_network.h
src/mnist/: mnist_reader_common.hpp
